--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tauri-apps/api": "^1",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.368.0",
     "react": "^18.2.0",
