--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.368.0",
+    "moment": "^2.30.1",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
